assets/css/style.css
/* General */

html,
body {
    height: 100%;
    max-width: 940px;
    margin: auto;
}

/* CSS Grid: index.html (less than 375px) */

.container index {
    display: grid;
    grid-template-columns: 1fr 1fr 1fr;
    grid-template-rows: 1fr 1fr 1fr 1fr;
    gap: 5px;
    grid-auto-flow: row;
    grid-template-areas:
        "main-header main-header main-header"
        "main-nav main-nav main-nav"
        "content-index content-index content-index"
        "main-footer main-footer main-footer";
}

.main-header {
    margin-top: 10px;
    grid-area: main-header;
    background-image: none;
}

.main-nav {
    background-color: rgb(0, 0, 0);
    text-align: center;
    grid-area: main-nav;
}

.main-nav a {
    text-decoration: none;
    display: block;
    color: white;
    padding: 1em;
    text-align: center;
}

.main-nav ul {
    list-style-type: none;
}

.content-index {
    display: grid;
    grid-template-columns: 1fr 1fr 1fr;
    grid-template-rows: auto 1fr 1fr 1fr 1fr;
    gap: 5px;
    grid-auto-flow: row;
    grid-template-areas:
        "main-index-text main-index-text main-index-text"
        "main-index-img main-index-img main-index-img"
        "main-index-article-3 main-index-article-3 main-index-article-3"
        "main-index-article-2 main-index-article-2 main-index-article-2"
        "main-index-article-1 main-index-article-1 main-index-article-1";
    grid-area: content-index;
}

.main-index-text {
    grid-area: main-index-text;
}

.main-index-img {
    grid-area: main-index-img;
}

.main-index-img img {
    width: 100%;
    height: auto;
}

.main-index-article-3 {
    grid-area: main-index-article-3;
}

.main-index-article-2 {
    grid-area: main-index-article-2;
}

.main-index-article-1 {
    grid-area: main-index-article-1;
}

.main-footer {
    grid-area: main-footer;
    text-align: center;
    margin-top: 10px;
}

/* CSS Grid: articles.html */

.container articles {
    display: grid;
    grid-template-columns: 1fr 1fr 1fr;
    grid-template-rows: 1fr 1fr 1fr 1fr;
    gap: 10px 10px;
    grid-auto-flow: row;
    grid-template-areas:
        "main-header main-header main-header"
        "main-nav main-nav main-nav"
        "content-articles content-articles content-articles"
        "main-footer main-footer main-footer";
}

.content-articles {
    display: grid;
    grid-template-columns: 1fr 1fr 1fr;
    grid-template-rows: 1fr 1fr 1fr;
    gap: 0px 0px;
    grid-auto-flow: row;
    grid-template-areas:
        "article-3-text article-3-text article-3-img"
        "article-2-text article-2-text article-2-img"
        "article-1-text article-1-text article-1-img";
    grid-area: content-articles;
}

.article-3-text {
    grid-area: article-3-text;
}

.article-3-img {
    grid-area: article-3-img;
}

.article-2-text {
    grid-area: article-2-text;
}

.article-2-img {
    grid-area: article-2-img;
}

.article-1-text {
    grid-area: article-1-text;
}

.article-1-img {
    grid-area: article-1-img;
}

/* CSS Grid: article.html */

.container article{
    display: grid;
    grid-template-columns: 1fr 1fr 1fr;
    grid-template-rows: 1fr 1fr 1fr 1fr;
    gap: 10px 10px;
    grid-auto-flow: row;
    grid-template-areas:
        "main-header main-header main-header"
        "main-nav main-nav main-nav"
        "content-article content-article content-article"
        "main-footer main-footer main-footer";
}

.content-article {
    display: grid;
    grid-template-columns: 1fr 1fr 1fr;
    grid-template-rows: 1fr 1fr 1fr 1fr;
    gap: 0px 0px;
    grid-auto-flow: row;
    grid-template-areas:
        "article-img-1 article-img-1 article-img-1"
        "article-main-text article-main-text article-main-text"
        "article-subtext-1 article-subtext-1 article-img-2"
        "article-img-3 article-subtext-2 article-subtext-2";
    grid-area: content-article;
}

.article-img-1 {
    grid-area: article-img-1;
}

.article-main-text {
    grid-area: article-main-text;
}

.article-subtext-1 {
    grid-area: article-subtext-1;
}

.article-img-2 {
    grid-area: article-img-2;
}

.article-img-3 {
    grid-area: article-img-3;
}

.article-subtext-2 {
    grid-area: article-subtext-2;
}


/* CSS Grid: contact.html */

.container contact {  display: grid;
    grid-template-columns: 1fr 1fr 1fr;
    grid-template-rows: 1fr 1fr 1fr 1fr;
    gap: 10px 10px;
    grid-auto-flow: row;
    grid-template-areas:
      "main-header main-header main-header"
      "main-nav main-nav main-nav"
      "content-contact content-contact content-contact"
      "main-footer main-footer main-footer";
  }
  
  .content-contact {  display: grid;
    grid-template-columns: 1fr 1fr 1fr;
    grid-template-rows: 1fr;
    gap: 0px 0px;
    grid-auto-flow: row;
    grid-template-areas:
      "contact-img contact-form contact-map";
    grid-area: content-contact;
  }
  
  .contact-img { grid-area: contact-img; }
  
  .contact-form { grid-area: contact-form; }
  
  .contact-map { grid-area: contact-map; }

/* CSS Grid: (from 500px) */

@media (min-width: 501px) {

    .main-header {
        background-image: url("../images/skye-1.jpg");
        height: 150px;
    }

    .main-nav ul li {
        display: inline-block;
    }

    .container index {
        display: grid;
        grid-template-columns: 1fr 1fr 1fr;
        grid-template-rows: 1fr 1fr 1fr 1fr;
        gap: 0;
        grid-auto-flow: row;
        grid-template-areas:
            "main-header main-header main-header"
            "main-nav main-nav main-nav"
            "content-index content-index content-index"
            "main-footer main-footer main-footer";
    }

    .content-index {
        display: grid;
        grid-template-columns: 1fr 1fr 1fr;
        grid-template-rows: 1fr auto;
        gap: 10px;
        grid-auto-flow: row;
        grid-template-areas:
            "main-index-img main-index-img main-index-text"
            "main-index-article-3 main-index-article-2 main-index-article-1";
        grid-area: content-index;
    }
}

